--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ astroid==2.15.5
 asttokens==2.2.1
 backcall==0.2.0
 black==23.3.0
+boto3==1.28.18
+botocore==1.31.18
 cffi==1.15.1
 click==8.1.3
 coverage==7.2.7
@@ -12,9 +14,11 @@ executing==1.2.0
 ipython==8.13.2
 isort==5.12.0
 jedi==0.18.2
+jmespath==1.0.1
 lazy-object-proxy==1.9.0
 matplotlib-inline==0.1.6
 mccabe==0.7.0
+mypy==1.4.1
 mypy-extensions==1.0.0
 packaging==23.1
 parso==0.8.3
@@ -28,9 +32,13 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.15.1
 pylint==2.17.4
+python-dateutil==2.8.2
+s3transfer==0.6.1
 six==1.16.0
 stack-data==0.6.2
 tomlkit==0.11.8
 traitlets==5.9.0
+typing_extensions==4.7.1
+urllib3==1.26.16
 wcwidth==0.2.6
 wrapt==1.15.0
