--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: mypy
 
 on: [push]
 
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        pip install mypy
+    - name: Analysing the code with mypy
       run: |
-        pylint $(git ls-files '*.py')
+        mypy --strict $(git ls-files '*.py')
