--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,4 @@
-aiobotocore==2.5.4
-aiohttp==3.8.5
-aioitertools==0.11.0
-aiosignal==1.3.1
-async-timeout==4.0.3
-attrs==23.1.0
-botocore==1.31.17
-cffi==1.15.1
-charset-normalizer==3.2.0
-cryptography==40.0.2
-frozenlist==1.4.0
-fsspec==2023.6.0
-idna==3.4
-jmespath==1.0.1
-multidict==6.0.4
-pycparser==2.21
-python-dateutil==2.8.2
-s3fs==2023.6.0
-six==1.16.0
-urllib3==1.26.16
-wrapt==1.15.0
-yarl==1.9.2
+aiobotocore>=2.5.4
+botocore>=1.31.17
+cryptography>=41.0.0
+s3fs>=2023.6.0
